# GalAxions

./: .gitignore  CMakeLists.txt  Farrar.cpp  Farrar.h  Makefile  Pshirkov.cpp  Pshirkov.h  README.md  calculateMaps.cpp  constants.h  contributors.txt  farrar.cpp  farrar.h  galaxions.cpp  galaxions.h  gas.h  magnfield.cpp  magnfield.h  main.cpp  mymatrix.cpp  solvers.h
include/: Farrar.h  Ferriere07.h  JF12.h  Pshirkov.h  cgs.h  constants.h  damping.h  galaxions.h  galconda.h  gas.h  healpixMap.h  los.h  magneticfield.h  magnfield.h  mks.h  mymatrix.h  solvers.h
libs/ymw16/: CMakeLists.txt  cn.h  dmdtau.c  dora.c  fermibubble.c  frb_d.c  galcen.c  gum.c  lmc.c  localbubble.c  ne.c  ne_crd.c  nps.c  smc.c  spiral.c  thick.c  thin.c  ymw16.c  ymw16_ne.c  ymw16par.c
plots/: plot_conversion.py  plot_lib.py  plot_los.py
src/: Farrar.cpp  Ferriere07.cpp  JF12.cpp  Pshirkov.cpp  calculateMaps.cpp  galaxions.cpp  galconda.cpp  gas.cpp  magneticfield.cpp  magnfield.cpp  main.cpp  mymatrix.cpp  solvers.cpp
